--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1 {
 
 header {
   width: 50%;
-  margin: 300px auto;
+  margin: 20% auto;
   text-align: center;
 }
 
@@ -42,4 +42,32 @@ p {
 
 #end {
   display: none;
+}
+
+#mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 760px) {
+  #some-element { 
+    display: none; 
+  }
+
+  #mobile {
+    display: inline-block;
+  }
+
+  #desktop {
+    display: none;
+  }
+
+  header {
+    font-size: 3.5vw;
+    margin: 40% auto;
+    width: 95%;
+  }
+
+  h1 {
+    font-size: 10vw;
+  }
 }
